src/components/bonsaiCard/BonsaiCard.module.css
.cardContainer {
  display: flex;
  flex-direction: column;
  max-height: 800px;
  height: fit-content;
  border-radius: 10px;
  padding: 10px;
}

.cardContainer:hover {
  cursor: pointer;
  background-color: whitesmoke;
}

.bonsaiInfoContainer {
  display: flex;
  align-items: center;
  width: 100%;
  padding: 5px 0 10px 0;
}

.bonsaiInfoCell {
  border: 1px solid black;
  display: flex;
  border-radius: 10px;
  padding: 2.5px 5px;
  margin: 2px 10px 0 0;
}

.bonsaiInfoCell > p {
  margin: 0 2.5px;
}

.bonsaiInfoCell > :first-child {
  font-weight: 700;
}

.imageFrame {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 480px;
  width: 900px;
  background-color: var(--subtle-background);
  padding: 10px 0;
  border-radius: 10px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.image {
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  object-fit: contain;
}

.image:hover {
  cursor: default;
}

.chapterButton {
  font-size: 20px;
  margin: 8px;
  border-radius: 5px;
  background-color: transparent;
  border: none;
  padding: 10px 20px;
  width: min-content;
  height: min-content;
}

.chapterButton:hover {
  cursor: pointer;
  background-color: var(--primary-color-site);
}

.chapterInfo {
  display: flex;
  align-items: center;
  height: min-content;
  width: 900px;
  background-color: var(--subtle-background);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding-bottom: 5px;
}

.chapterDate {
  width: 100px;
  padding-left: 10px;
  font-size: small;
}

.chapterCaption,
.chapterDate {
  font-style: italic;
  margin: 4px 0;
  color: grey;
}

.captionContainer {
  width: calc(100% - 200px);
  display: flex;
  justify-content: center;
  margin-right: 100px;
}

